<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Onosendai</string>
	<string name="update_service_label">Onosendai update service</string>
	<string name="storage_service_label">Onosendai storage service</string>
	<string name="send_outbox_service_label">Onosendai send outbox service</string>
	<string name="cleanup_service_label">Onosendai cleanup service</string>

	<string name="crash_dialog_title">CSI Onosendai</string>
	<string name="crash_dialog_text">Thank you for crash testing Onosendai.  Please email a bug report.</string>
	<string name="crash_dialog_comment_prompt">You message here:</string>
	<string name="crash_dialog_ok_toast">Thank you for your time.</string>

	<string name="setup_title">Onosendai Setup</string>
	<string name="setup_welcome">
		Onosendai is not currently configured.
		\n
		This will help you get started by generating an initial configuration for you that you can customise.
		\n
		Select an action from the list below.
	</string>
	<string name="setup_act_twitter">Twitter Account</string>
	<string name="setup_act_swimport">Import from SuccessWhale</string>
	<string name="setup_act_writeexampleconf">Manual Configuration</string>
	<string name="setup_act_useconf">Activate Manual Configuration</string>
	<string name="setup_des_twitter">
		Sign in to Twitter and authorise Onosendai to access your account.
	</string>
	<string name="setup_des_swimport">
		This will import your existing layout from SuccessWhale (SW).
		For this to you work you must have a SW account with a password configured.
		\n
		If you do not have a SW user-name and password please create one before continuing.
	</string>
	<string name="setup_des_writeexampleconf">
		This is an advanced option and requires you to manage a JSON file.
		\n
		This will generate you an example configuration file for you to fill in.
		After this file has been created you must go and edit it in text editor.
		Once it is ready return to this screen to import its content.
		\n
		The configuration file will be written to:
		\n
		${conf_path}
	</string>
	<string name="setup_des_useconf">
		It looks like you have created a configuration file.
		\n
		Use this option to validate that configuration file and import its content.
		\n
		Configuration will be read from:
		\n
		${conf_path}
	</string>

	<string name="outbox_title">Onosendai Outbox</string>
	<string name="preferences_title">Onosendai Preferences</string>

	<string name="btn_goto">goto</string>
	<string name="btn_jump_top">Top</string>
	<string name="btn_menu">menu</string>

	<string name="menu_post">Post</string>
	<string name="menu_outbox">Outbox</string>
	<string name="menu_refresh_column">Refresh Column</string>
	<string name="menu_refresh_all">Refresh All</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_sortbythread">Sort by Thread</string>
	<string name="menu_sortbytimeline">Sort by Timeline</string>
	<string name="menu_switchtheme">Switch Theme</string>

	<string name="btn_tweet_close">Close</string>
	<string name="btn_tweet_later">Later</string>
	<string name="btn_tweet_read">Read</string>

	<string name="btn_share_rt">RT</string>
	<string name="btn_share_like">Like</string>
	<string name="btn_share_quote">Quote</string>

	<string name="btn_post_cancel">Cancel</string>
	<string name="btn_post_post">Post</string>

</resources>