<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/group_popupmenu">

		<item
			android:id="@+id/mnuPost"
			android:title="@string/menu_post" />

		<item
			android:id="@+id/mnuRefreshColumnNow"
			android:title="@string/menu_refresh_column" />

		<item
			android:id="@+id/mnuRefreshAllNow"
			android:title="@string/menu_refresh_all" />

		<item
			android:id="@+id/mnuOutbox"
			android:title="@string/menu_outbox" />

		<item
			android:id="@+id/mnuPreferences"
			android:title="@string/menu_preferences" />

		<item
			android:id="@+id/mnuSortByThread"
			android:title="@string/menu_sortbythread" />

		<item
			android:id="@+id/mnuSortByTimeline"
			android:title="@string/menu_sortbytimeline" />

<!--		<item
			android:id="@+id/mnuSwitchTheme"
			android:title="@string/menu_switchtheme" /> -->
	</group>
</menu>